# django-icomoon

./: .gitignore  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  frozen.txt  setup.cfg  setup.py  sphinx_reload.py  tox.ini
docs/: conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py  usage.rst
docs/references/: index.rst  store.rst  views.rst
frontend/: package.json  webpack.config.js
frontend/scss/: main.scss
frontend/scss/components/: _icomoon.scss
frontend/scss/objects/: _icons.scss
frontend/scss/settings/: _icomoon_icons.scss  _icons.scss
frontend/scss/tools/: _functions.scss  _icons.scss
icomoon/: __init__.py  apps.py  parser.py  settings.py  store.py  urls.py  utils.py  views.py  webfont_map.py
icomoon/management/commands/: icomoon.py  icomoon_deploy.py
icomoon/templates/icomoon/: icon_map.css  icon_map.scss  index.html
icomoon/utils/: __init__.py
project_test/project/: settings.py  urls.py
project_test/tests/: 001_utils.py  002_parser.py  002_store.py  010_dummy.py  010_views.py  conftest.py
project_test/tests/data_fixtures/icomoon/: selection.json
requirements/: dev.txt
sandbox/: urls.py  wsgi.py
sandbox/settings/: base.py  demo.py  tests.py
sandbox/templates/: skeleton.html
tests/: 001_utils.py  002_store.py  010_views.py  conftest.py
tests/data_fixtures/icobasic/: selection.json
