;;
;; django-icomoon package
;;
[metadata]
name = django-icomoon
version = 1.4.1
description = A Django app to deploy wefonts from Icomoon and display them.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-icomoon
license = MIT
keywords = Django, Icomoon, CSS, Font
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    sphinx
    sphinx-rtd-theme
    livereload
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{36}-django{200,210,220,300,310},

[testenv]

deps =
    django200: Django>=2.0,<2.1
    django210: Django>=2.1,<2.2
    django220: Django>=2.2,<3.0
    django300: Django>=3.0,<3.1
    django310: Django>=3.1,<3.2

commands =
    pip install -e .[dev]
    pytest -vv tests
