;;
;; Django Icomoon package
;;
[metadata]
name = django-icomoon
version = 1.5.0-pre.1
description = A Django app to deploy webfonts from Icomoon and display them
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-icomoon
project_urls =
    Source Code = https://github.com/sveetch/django-icomoon
    Issue Tracker = https://github.com/sveetch/django-icomoon/issues
    Changelog = https://django-icomoon.readthedocs.io/en/latest/history.html
    Documentation = https://django-icomoon.readthedocs.io/
license = MIT
keywords = Django,Icomoon,CSS,Font
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=3.2,<4.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-django>=4.0.0
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx
    furo
    sphinx-copybutton
doc-live =
    livereload
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =
    py{38}-django{32}
    py{39}-django{32}

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<6.0
    django60: Django>=6.0,<6.1

commands =
    pip install -e .[dev]
    pytest -vv tests
